# BHPTNRSurrogate

./: CHANGELOG.md  README.md  __init__.py  pyproject.toml
.github/workflows/: tests.yml
surrogates/: BHPTNRSur1dq1e4.py  BHPTNRSur2dq1e3.py  __init__.py
surrogates/common_utils/: __init__.py  check_inputs.py  doc_string.py  filehash.py  fits.py  load_GPRs.py  load_splines.py  utils.py
surrogates/model_utils/: eval_surrogates.py  load_surrogates.py
tests/: conftest.py  regression_data_1dq1e4.npz  test_1d_validation.py  test_1d_waveform.py  test_2d_validation.py  test_2d_waveform.py  test_check_inputs.py  test_gwsurrogate_comparison.py  test_imports.py
tutorials/: BHPTNRSur1dq1e4.ipynb  BHPTNRSur2dq1e3.ipynb  testing_for_pr_no9.ipynb
