[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "BHPTNRSurrogate"
version = "0.1.0"
description = "Black hole perturbation theory numerical relativity surrogate waveform models"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "gwtools",
]

[project.optional-dependencies]
gpr = ["scikit-learn"]

[tool.setuptools.packages]
find = {where = [".."], include = ["BHPTNRSurrogate*"]}

[tool.setuptools.package-data]
"*" = ["*.h5"]
